Yet more cleanup...

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,7 +52,8 @@ lib_deps =
     ${common.lib_deps}
     https://github.com/cdntinker/TinkerLibs-MQTT
     https://github.com/cdntinker/TinkerLibs-HTTP
-        Adafruit NeoPixel                               ; https://github.com/adafruit/Adafruit_NeoPixel
+    EspSoftwareSerial                       ; https://github.com/plerup/espsoftwareserial
+    Adafruit NeoPixel ; Major Overkill      ; https://github.com/adafruit/Adafruit_NeoPixel
 
 build_flags =
     ${common.build_flags}
